--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,14 @@
   "dependencies": {
     "@graphql-tools/utils": "^8.2.3",
     "apollo-server-express": "^3.3.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "graphql": "^15.6.0"
+    "graphql": "^15.6.0",
+    "mongodb": "^4.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^16.10.1",
     "nodemon": "^2.0.13",
     "ts-node": "^10.2.1",
