added seed file

--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "start": "nodemon src/index.ts",
+    "seed": "ts-node temp/seed.ts",
     "build": "tsc --project ./"
   }
 }
