--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "dependencies": {
     "@graphql-tools/utils": "^8.2.3",
+    "@types/lodash.merge": "^4.6.6",
     "apollo-server-express": "^3.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.6.0",
+    "lodash.merge": "^4.6.2",
     "mongodb": "^4.1.2"
   },
   "devDependencies": {
