--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "antd": "^4.16.13",
     "apollo-boost": "^0.4.9",
     "cra-template-typescript": "1.1.2",
     "graphql": "^15.6.1",
