--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,14 @@
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.1",
     "antd": "^4.16.13",
     "apollo-boost": "^0.4.9",
     "cra-template-typescript": "1.1.2",
     "graphql": "^15.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4"
   },
