--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "apollo-server-express": "^3.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "googleapis": "^89.0.0",
     "graphql": "^15.6.0",
     "lodash.merge": "^4.6.2",
     "mongodb": "^4.1.2"
