--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "@graphql-tools/utils": "^8.2.3",
     "@types/lodash.merge": "^4.6.6",
     "apollo-server-express": "^3.3.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "googleapis": "^89.0.0",
@@ -13,6 +14,7 @@
     "mongodb": "^4.1.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^16.10.1",
