--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.16.13",
     "cra-template-typescript": "1.1.2",
     "graphql": "^15.6.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
