--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "tinyhouse-server",
   "version": "0.1.0",
   "dependencies": {
+    "@google/maps": "^1.1.3",
     "@graphql-tools/utils": "^8.2.3",
     "@types/lodash.merge": "^4.6.6",
     "apollo-server-express": "^3.3.0",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/google__maps": "^0.5.16",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^16.10.1",
     "nodemon": "^2.0.13",
