--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "googleapis": "^89.0.0",
     "graphql": "^15.6.0",
     "lodash.merge": "^4.6.2",
-    "mongodb": "^4.1.2"
+    "mongodb": "^4.1.2",
+    "stripe": "^8.186.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -20,6 +21,7 @@
     "@types/google__maps": "^0.5.16",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^16.10.1",
+    "@types/stripe": "^8.0.417",
     "nodemon": "^2.0.13",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
