--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "@graphql-tools/utils": "^8.2.3",
     "@types/lodash.merge": "^4.6.6",
     "apollo-server-express": "^3.3.0",
+    "cloudinary": "^1.27.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
