--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.1",
+    "@types/react-stripe-elements": "^6.0.6",
     "antd": "^4.16.13",
     "cra-template-typescript": "1.1.2",
     "graphql": "^15.6.1",
@@ -18,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-stripe-elements": "^6.1.2",
     "typescript": "^4.4.4"
   },
   "scripts": {
